--- a/samples/sync_notion_families.ipynb
+++ b/samples/sync_notion_families.ipynb
@@ -61,7 +61,7 @@
    "source": [
     "def get_item_in_list(list_, name, default=None):\n",
     "    for i in list_:\n",
-    "        if i.name == name:\n",
+    "        if i.name.lower() == name.lower():\n",
     "            try:\n",
     "                return i.value\n",
     "            except AttributeError:\n",
@@ -178,7 +178,7 @@
     "        \n",
     "        # Properties\n",
     "        tags = get_item_in_list(fam.properties, 'Tags', default=\"\")\n",
-    "        if \",\" in tags:\n",
+    "        if \",\" in tag_list:\n",
     "            tags = \"\\n\".join([tag.strip() for tag in tags.split(',')])\n",
     "        properties[\"_Tags\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(tags)}}]}\n",
     "        \n",
@@ -198,7 +198,7 @@
     "            c_bool = False\n",
     "        properties[\"_Has MEP Connectors\"] = {\"checkbox\": c_bool}\n",
     "        \n",
-    "        pricing = get_item_in_list(fam.properties, 'Includes', default=False)\n",
+    "        pricing = get_item_in_list(fam.properties, 'Includes Pricing', default=False)\n",
     "        if pricing == 'Yes':\n",
     "            p_bool = True\n",
     "        else:\n",
@@ -216,7 +216,7 @@
     "        if sms:\n",
     "            properties['_SMS Purchase Link'] = {\"url\": sms}\n",
     "        \n",
-    "        product_id = get_item_in_list(fam.properties, 'product_iD', default=\"\")\n",
+    "        product_id = get_item_in_list(fam.properties, 'product_id', default=\"\")\n",
     "        if product_id:\n",
     "            properties['_Product Page'] = {\"url\": f\"https://fetchbim.com/catalog/product/view/id/{str(product_id)}\"}\n",
     "        \n",
@@ -231,7 +231,7 @@
     "        if ifc_id:\n",
     "            properties[\"_IFC\"] = {\"relation\": [{\"id\": ifc_id}]}\n",
     "            \n",
-    "        omni_value = get_item_in_list(fam.properties, 'IFC')\n",
+    "        omni_value = get_item_in_list(fam.properties, 'Omniclass')\n",
     "        omni_id = omni_dict.get(omni_value)\n",
     "        if omni_id:\n",
     "            properties[\"_Omniclass\"] = {\"relation\": [{\"id\": omni_id}]}\n",
@@ -242,11 +242,11 @@
     "            properties[\"_Uniformat\"] = {\"relation\": [{\"id\": uniformat_id}]}\n",
     "            \n",
     "        master_value = get_item_in_list(fam.parameters, 'Keynote')\n",
-    "        master_id = uniformat_dict.get(master_value)\n",
+    "        master_id = master_dict.get(master_value)\n",
     "        if master_id:\n",
     "            properties[\"_Masterformat\"] = {\"relation\": [{\"id\": master_id}]}\n",
     "            \n",
-    "        revit_cat_id = ifc_dict.get(fam.category_name.split('/')[0])\n",
+    "        revit_cat_id = revit_cat_dict.get(fam.category_name.split('/')[0])\n",
     "        if revit_cat_id:\n",
     "            properties[\"_Revit Category\"] = {\"relation\": [{\"id\": revit_cat_id}]}\n",
     "            \n",
