update tag function

--- a/samples/sync_notion_families.ipynb
+++ b/samples/sync_notion_families.ipynb
@@ -33,6 +33,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten_tags(list_of_tags_properties):\n",
+    "    tag_list = []\n",
+    "    for tags in list_of_tags_properties:\n",
+    "        if ',' in tags:\n",
+    "            tags = [tag.strip() for tag in tags.split(',')]\n",
+    "        else:\n",
+    "            tags = [tags]\n",
+    "        tag_list.extend(tags)\n",
+    "    return \"\\n\".join(tag_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -81,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "family_ids = fetch.families.list()"
+    "family_ids = fetch.families.list(public_only=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,14 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manual list\n",
+    "# family_ids = [\"4da32ac0-408d-483a-92ef-e0fdf7d6b4d9\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 707/707 [22:32<00:00,  1.91s/it]\n"
+      "100%|██████████| 1/1 [00:02<00:00,  2.55s/it]\n"
      ]
     }
    ],
@@ -177,9 +204,13 @@
     "        properties[\"_Long Description\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(long_descript)}}]}\n",
     "        \n",
     "        # Properties\n",
-    "        tags = get_item_in_list(fam.properties, 'Tags', default=\"\")\n",
-    "        if \",\" in tag_list:\n",
-    "            tags = \"\\n\".join([tag.strip() for tag in tags.split(',')])\n",
+    "        # tag_list = get_item_in_list(fam.properties, 'Tags', default=\"\")\n",
+    "        tag_list = []\n",
+    "        for p in fam.properties:\n",
+    "            if p.name.lower() == 'tags':\n",
+    "                tag_list.append(p.value)\n",
+    "        tags = flatten_tags(tag_list)\n",
+    "        # print(tags)\n",
     "        properties[\"_Tags\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(tags)}}]}\n",
     "        \n",
     "        detail = get_item_in_list(fam.properties, 'Detail', default=\"\")\n",
@@ -249,6 +280,8 @@
     "        revit_cat_id = revit_cat_dict.get(fam.category_name.split('/')[0])\n",
     "        if revit_cat_id:\n",
     "            properties[\"_Revit Category\"] = {\"relation\": [{\"id\": revit_cat_id}]}\n",
+    "        \n",
+    "        # print(properties)\n",
     "            \n",
     "        response = notion.pages.update(page_id=page_id, properties=properties, cover=cover)\n",
     "        \n",
@@ -256,7 +289,7 @@
     "script_time_s = t1_stop - t1_start\n",
     "script_time = \"{:0>8}\".format(str(datetime.timedelta(seconds=script_time_s)))\n",
     "table_dict = dict()\n",
-    "table_dict['Public Ids'] = len(family_ids) \n",
+    "table_dict['Total Ids'] = len(family_ids) \n",
     "table_dict['Synced Pages'] = count \n",
     "table_dict['Elapsed Time'] = script_time      \n",
     "sync_complete_msg(\n",
